Fix issue where some photos would overlap

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -3,6 +3,12 @@
   height: 100vh;
 }
 
+.slide {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+
 img {
   width: 100%;
   height: 100%; 
